labs/Week 5 - DevOps, CI-CD and OpenShift/module-42/lab42/starter/openshift/route.yaml
# TODO: adjust host / tls per instructor OpenShift
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: crm-api
spec:
  to:
    kind: Service
    name: crm-api
  port:
    targetPort: http
  # tls:
  #   termination: edge
